RESOLVED FIXED133132
REGRESSION: All non-mainframe scrollbars don't paint after r169065
https://bugs.webkit.org/show_bug.cgi?id=133132
Summary REGRESSION: All non-mainframe scrollbars don't paint after r169065
Beth Dakin
Reported 2014-05-20 13:26:00 PDT
REGRESSION: All non-mainframe scrollbars don't paint after r169065 <rdar://problem/16968850>
Attachments
Patch (2.42 KB, patch)
2014-05-20 13:32 PDT, Beth Dakin
ggaren: review+
Beth Dakin
Comment 1 2014-05-20 13:32:32 PDT
Geoffrey Garen
Comment 2 2014-05-20 13:33:51 PDT
Comment on attachment 231788 [details] Patch r=me
Beth Dakin
Comment 3 2014-05-20 13:37:28 PDT
Note You need to log in before you can comment on or make changes to this bug.