REGRESSION: All non-mainframe scrollbars don't paint after r169065 https://bugs.webkit.org/show_bug.cgi?id=133132 -and corresponding- <rdar://problem/16968850>

Reviewed by Geoff Garen.

We should not universally return true here. This feature will only work for
scrollbars with layers.
* platform/ScrollableArea.h:
* platform/Scrollbar.cpp:
(WebCore::Scrollbar::supportsUpdateOnSecondaryThread):



Canonical link: https://commits.webkit.org/151153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169129 268f45cc-cd09-0410-ab3c-d52691b4dbfc